kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: data-structures-and-algorithms-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: data-structures-and-algorithms
              servicePort: 8080
